# UltraCold

./: .gitattributes  .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE.md  README.md  TODO.md
bundled/: configure_bundled.sh
cmake/: UltraColdConfig.cmake  UltraColdInstall.cmake
docs/: Doxyfile  Doxyfile.bak  index.html
docs/_includes/: head.html
docs/html/: _bogolyubov_solvers_8hpp_source.html  _colors_8hpp_source.html  _d_ft_calculator_8hpp_source.html  _data_writer_8hpp_source.html  _formulas.dvi  _formulas.tex  _g_p_solvers_8hpp_source.html  _hardware_inspector_8hpp_source.html  _input_parser_8hpp_source.html  _l_i_c_e_n_s_e_8md.html  _ultra_cold_8hpp.html  _ultra_cold_8hpp.js  _ultra_cold_8hpp_source.html  _vector_8hpp_source.html  annotated.html  annotated_dup.js  bogolyubov__solver_8cpp.html  bogolyubov__solver_8cpp.js  bogolyubov__solvers_8hpp.html  bogolyubov__solvers_8hpp.js  bogolyubov__solvers_8hpp_source.html  class_dipoles2d-members.html  class_dipoles2d.html  class_dipoles2d.js  class_dipoles3d-members.html  class_dipoles3d.html  class_dipoles3d.js  class_ultra_cold_1_1_bogolyubov_solvers_1_1_trapped_bogolyubov_solver-members.html  class_ultra_cold_1_1_bogolyubov_solvers_1_1_trapped_bogolyubov_solver.html  class_ultra_cold_1_1_bogolyubov_solvers_1_1_trapped_bogolyubov_solver.js  class_ultra_cold_1_1_bogolyubov_solvers_1_1_trapped_dipolar_bogolyubov_solver-members.html  class_ultra_cold_1_1_bogolyubov_solvers_1_1_trapped_dipolar_bogolyubov_solver.html  class_ultra_cold_1_1_bogolyubov_solvers_1_1_trapped_dipolar_bogolyubov_solver.js  class_ultra_cold_1_1_fourier_space_output_1_1_data_out-members.html  class_ultra_cold_1_1_fourier_space_output_1_1_data_out.html  class_ultra_cold_1_1_fourier_space_output_1_1_data_out.js  class_ultra_cold_1_1_g_p_solvers_1_1_dipolar_g_p_solver-members.html  class_ultra_cold_1_1_g_p_solvers_1_1_dipolar_g_p_solver.html  class_ultra_cold_1_1_g_p_solvers_1_1_dipolar_g_p_solver.js  class_ultra_cold_1_1_g_p_solvers_1_1_g_p_solver-members.html  (+175 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_7.js  files_8.js  functions_0.js  functions_1.js  (+35 more)
docs/latex/: _ultra_cold_8hpp.tex  _ultra_cold_8hpp_source.tex  annotated.tex  bogolyubov__solver_8cpp.tex  bogolyubov__solvers_8hpp.tex  bogolyubov__solvers_8hpp_source.tex  class_ultra_cold_1_1_bogolyubov_solvers_1_1_trapped_bogolyubov_solver.tex  class_ultra_cold_1_1_bogolyubov_solvers_1_1_trapped_dipolar_bogolyubov_solver.tex  class_ultra_cold_1_1_fourier_space_output_1_1_data_out.tex  class_ultra_cold_1_1_g_p_solvers_1_1_dipolar_g_p_solver.tex  class_ultra_cold_1_1_g_p_solvers_1_1_g_p_solver.tex  class_ultra_cold_1_1_m_k_l_wrappers_1_1_d_ft_calculator.tex  class_ultra_cold_1_1_real_space_output_1_1_data_out.tex  class_ultra_cold_1_1_tools_1_1_hardware_inspector.tex  class_ultra_cold_1_1_tools_1_1_input_parser.tex  class_ultra_cold_1_1_vector.tex  classdouble_01_5.tex  classint.tex  data__out_8cpp.tex  data__out_8hpp.tex  data__out_8hpp_source.tex  dft_8cpp.tex  dft_8hpp.tex  dft_8hpp_source.tex  dipolar__bogolyubov__solver_8cpp.tex  dipolar__gp__solver_8cpp.tex  dir_171df629ecfd9c2a1afed8a0901a16be.tex  dir_19373f467389307dc54ab8a6e9e19559.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_7b5d38f1875f1b693f62ca6a108a1129.tex  dir_d62c9e04952dc06d9783e69119cf16ec.tex  dir_ef3b2545113449f8f25e623a543d64e3.tex  example-1.tex  example-1_8dox.tex  example-2.tex  example-2_8dox.tex  example-3.tex  example-3_8dox.tex  example-4.tex  example-4_8dox.tex  (+32 more)
docs/pages/: example-1.dox  example-2.dox  example-3.dox  example-4.dox  example-5.dox  example-6.dox  example-7.dox  examples.dox  mainpage.dox
docs/pages/images/: example-3.dox
examples/: README.md
examples/example-1/: CMakeLists.txt  README.md  example-1.cpp  example-1.prm
examples/example-2/: CMakeLists.txt  README.md  example-2.cpp  example-2.prm
examples/example-3/: CMakeLists.txt  README.md  example-3.cpp  example-3.prm
examples/example-4/: CMakeLists.txt  README.md  example-4.cpp  example-4.prm
examples/example-5/: CMakeLists.txt  README.md  example-5.cpp  example-5.prm
examples/example-6/: CMakeLists.txt  README.md  example-6.cpp  example-6.prm
examples/example-7/: CMakeLists.txt  README.md  example-7.cpp  example-7.prm
source/: UltraCold.hpp
source/base/: CMakeLists.txt
source/base/bundled/: configure_bundled.sh
source/base/solvers/: BogolyubovSolver.cpp  BogolyubovSolvers.hpp  CMakeLists.txt  DipolarBogolyubovSolver.cpp  DipolarGPSolver.cpp  GPSolver.cpp  GPSolvers.hpp
source/base/utilities/: CMakeLists.txt  Colors.cpp  Colors.hpp  DFtCalculator.cpp  DFtCalculator.hpp  DataWriter.cpp  DataWriter.hpp  HardwareInspector.cpp  InputParser.cpp  InputParser.hpp  Vector.cpp  Vector.hpp  mesh_fourier_space.cpp  mesh_fourier_space.hpp
source/cuda/: CMakeLists.txt  cudaDipolarGPSolver.cu  cudaDipolarGPSolver.cuh  cudaGPSolver.cu  cudaGPSolver.cuh  simple_kernels.cu  simple_kernels.cuh  solver_kernels.cu  solver_kernels.cuh
src/: UltraCold.hpp
src/mkl_wrappers/: CMakeLists.txt  dft.cpp  dft.hpp
src/solvers/: CMakeLists.txt  bogolyubov_solver.cpp  bogolyubov_solvers.hpp  dipolar_bogolyubov_solver.cpp  dipolar_gp_solver.cpp  gp_solver.cpp  gp_solvers.hpp
src/utilities/: CMakeLists.txt  data_out.cpp  data_out.hpp  hardware_inspector.cpp  hardware_inspector.hpp  input_parser.cpp  input_parser.hpp  mesh_fourier_space.cpp  mesh_fourier_space.hpp  vector.cpp  vector.hpp
